// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find-conflicts combines non-conflicting dependencies 1`] = `
Object {
  "react": Object {
    "2.0.0": Object {
      "entries": Array [],
      "parentRootDependencies": Array [
        "test1",
      ],
      "parents": Array [
        "test1",
      ],
      "semver": "^2.0.0",
    },
  },
  "react-dom": Object {
    "1.0.0": Object {
      "entries": Array [],
      "parentRootDependencies": Array [
        "test1",
        "test2",
      ],
      "parents": Array [
        "test1",
        "test2",
      ],
      "semver": "^1.0.0",
    },
  },
}
`;

exports[`find-conflicts creates separate entries for conflicting versions with different entrypoints 1`] = `
Object {
  "react": Object {
    "2.0.0": Object {
      "entries": Array [],
      "parentRootDependencies": Array [
        "test1",
      ],
      "parents": Array [
        "test1",
      ],
      "semver": "^2.0.0",
    },
  },
  "react-dom": Object {
    "1.0.0": Object {
      "entries": Array [
        "a",
      ],
      "parentRootDependencies": Array [
        "test1",
      ],
      "parents": Array [
        "test1",
      ],
      "semver": "^1.0.0",
    },
    "1.3.5": Object {
      "entries": Array [
        "b",
      ],
      "parentRootDependencies": Array [
        "test2",
      ],
      "parents": Array [
        "test2",
      ],
      "semver": "^1.0.0",
    },
  },
}
`;

exports[`find-conflicts doesn't create separate entries for semver matching when the entry points match 1`] = `
Object {
  "react": Object {
    "2.0.0": Object {
      "entries": Array [],
      "parentRootDependencies": Array [
        "test1",
      ],
      "parents": Array [
        "test1",
      ],
      "semver": "^2.0.0",
    },
  },
  "react-dom": Object {
    "1.3.5": Object {
      "entries": Array [
        "a",
      ],
      "parentRootDependencies": Array [
        "test1",
        "test2",
      ],
      "parents": Array [
        "test1",
        "test2",
      ],
      "semver": "^1.0.0",
    },
  },
}
`;
